--- a/README.Rmd
+++ b/README.Rmd
@@ -21,8 +21,8 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 Doubly robust machine learner (DR Learner) for Heterogeneous Treatment Effect 
-Estimation to enable approximately optimal policy targeting using best linear 
-projections.
+Estimation from [Kennedy (2022)](https://arxiv.org/pdf/2004.14497.pdf) to enable 
+approximately optimal policy targeting using best linear projections.
 
 ## Installation
 
@@ -77,7 +77,7 @@ Let $(D^n_1,D^n_2$) be two independent samples of $n$ observations of the data m
 *Step 1. Nuisance training*
 
 - Construct estimates of $\hat{\pi}$ of the propensity scores $\pi$ using $D^n_1$.
-- Construct estimates ($\hat{\mu}_{0},\hat{\mu}_{1}$) of the regression functions ($\mu_0,\mu_1$) using $D^n_1$.
+- Construct estimates $(\hat{\mu}_{0},\hat{\mu}_{1})$ of the regression functions $(\mu_0,\mu_1)$ using $D^n_1$.
 
 *Step 2. Pseudo-outcome regression:*
 
