--- a/README.Rmd
+++ b/README.Rmd
@@ -67,6 +67,7 @@ The aim of conditional average treatment effect estimation is to estimate the di
 $$
 \tau(x) \equiv \mu_1(x)-\mu_0(x).
 $$
+From $\tau(x)$ we would like to then identify optimal treatments for each individual, even when we only observe a subset of covariates $A$ where $A \subseteq X$.
 
 ### Doubly Robust Learner (DR Learner)
 
@@ -77,7 +78,7 @@ Let $(D^n_1,D^n_2$) be two independent samples of $n$ observations of the data m
 *Step 1. Nuisance training*
 
 - Construct estimates of $\widehat{\pi}$ of the propensity scores $\pi$ using $D^n_1$.
-- Construct estimates $(\widehat{\mu}_{0},\widehat{\mu}_{1})$ of the regression functions $(\mu_0,\mu_1)$ using $D^n_1$.
+- Construct estimates $(\widehat{\mu_{0}},\widehat{\mu_{1}})$ of the regression functions $(\mu_0,\mu_1)$ using $D^n_1$.
 
 *Step 2. Pseudo-outcome regression:*
 
