minor readme install directions

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,8 +29,8 @@ approximately optimal policy targeting using best linear projections.
 You can install the development version of blpopt from [GitHub](https://github.com/) with:
 
 ``` r
-# install.packages("devtools")
-devtools::install_github("christophergandrud/blpopt")
+# install.packages("remotes")
+remotes::install_github("christophergandrud/blpopt")
 ```
 
 ## About
@@ -67,6 +67,7 @@ The aim of conditional average treatment effect estimation is to estimate the di
 $$
 \tau(x) \equiv \mu_1(x)-\mu_0(x).
 $$
+
 From $\tau(x)$ we would like to then identify optimal treatments for each individual, even when we only observe a subset of covariates $A$ where $A \subseteq X$.
 
 ### Doubly Robust Learner (DR Learner)
@@ -105,6 +106,9 @@ linear projection of the CATE given observed covariates $A$ where $A \subseteq X
 ## Example
 
 ```{r}
+# remotes::install_github("christophergandrud/blpopt")
+# remotes::install_github("christophergandrud/drlearner")
+
 xfun::pkg_attach2("blpopt", "drlearner", "tidyr", "ggplot2")
 theme_set(theme_minimal())
 
