--- a/README.Rmd
+++ b/README.Rmd
@@ -154,3 +154,16 @@ ggplot(blp_drl_pred, aes(A, blp_drl)) +
     subtitle = "Black dashed line represents the true effect.\nGreen line is CATE-BLP from DR Learner"
   )
 ```
+
+```{r}
+# Find total predicted effect using an approximately optimal vs. "treat all" 
+# targeting. Uncertainty estimated with bootstrap
+total_pred <- cate_blp_bootstrap(blp_drl, iterations = 1000)
+
+total_pred$difference_blp <- total_pred$predicted_blp_optimal_totals - total_pred$predicted_totals
+
+ggplot(total_pred, aes(difference_blp)) +
+    geom_density(alpha = 0.7) +
+    xlab("\nPredicted Incremental Profit") +
+    ggtitle("Bootstraped Predicted Incremental Profit of using\nApproximately Optimal vs 'Treat All' targeting\nfor a population with characteristics A")
+```
