--- a/README.Rmd
+++ b/README.Rmd
@@ -119,7 +119,7 @@ linear projection of the CATE given observed covariates $A$ for unit $i$ $(\wide
 
 It is often non-trivial to apply a treatment targeting regime, even if we have good estimates of the 
 CATE. We can estimate the expected benefit of approximately optimal targeting by comparing the the CATE-BLP 
-if we apply the treatment to the whole population ($Pr(W) = 1$) compared to a world where we 
+if we apply the treatment to the whole population $(Pr(W) = 1)$ compared to a world where we 
 only apply a treatment if the BLP is greater than some value $\gamma$:
 
 $$
@@ -173,7 +173,8 @@ ggplot(blp_drl_pred, aes(A, blp_drl)) +
 
 # Find total predicted effect using an approximately optimal vs. "treat all" 
 # targeting. Uncertainty estimated with bootstrap
-total_pred <- cate_blp_bootstrap(blp_drl, iterations = 1000)
+total_pred <- cate_blp_bootstrap(blp_drl, iterations = 1000, 
+                                 tau.treatment.baseline = 0)
 
 total_pred$difference_blp <- total_pred$predicted_optimal - total_pred$predicted_totals
 
