--- a/README.Rmd
+++ b/README.Rmd
@@ -115,22 +115,26 @@ estimate the outcome given the covariates $X$ using sample $D^n_2$.
 Using the output of the DR Learner procedure above, now find the best
 linear projection of the CATE given observed covariates $A$ for unit $i$ $(\widehat{\tau_{BLP}} (A_{i}))$, where $A \subseteq X$.
 
+See [here](https://github.com/christophergandrud/blpopt/blob/main/notebooks/promises-pitfalls-cate-blp.ipynb) for a discussion of when this strategy can be problematic.
+
 *Step 5 (optional): Expected benefit of targeting*
 
 It is often non-trivial to apply a treatment targeting regime, even if we have good estimates of the 
 CATE. We can estimate the expected benefit of approximately optimal targeting by comparing the the CATE-BLP 
 if we apply the treatment to the whole population $(Pr(W) = 1)$ compared to a world where we 
-only apply a treatment if the BLP is greater than some value $\gamma$:
+only apply a treatment if the BLP is greater than some value $\kappa_i$:
 
 $$
 W_i = 
 \begin{cases}
-& 1, & \text{if}\ \hat{\tau}_{BLP} (A_{i}) > \gamma \\
+& 1, & \text{if}\ \hat{\tau}_{BLP} (A_{i}) > \kappa_i \\
 & 0, & \text{otherwise}
 \end{cases}.
 $$
 
-We can estimate uncertainty around the total benefit via bootstrapping.
+Typically, $\kappa_i \ge 0$ as we usually don't want to apply a treatment with no or negative incremental value. $\kappa_i > 0$ reflects a non-zero cost of treatment for unit $i$.   
+
+We can estimate uncertainty around the total benefit via bootstrapping. See `blpopt::cate_blp_bootstrap` for an implementation.
 
 ## Example
 
@@ -149,7 +153,7 @@ X <- matrix(rnorm(n * p), n, p)
 
 # CATE varies along one dim only.
 tau_ex <- function(x) {
-  1 / (1 + exp(-x))
+  (1 / (1 + exp(-x))) - 0.5
 }
 TAU <- tau_ex(X[, 3])
 
@@ -170,16 +174,5 @@ ggplot(blp_drl_pred, aes(A, blp_drl)) +
   ggtitle("[1 Simulation] Compare predicted treatment effects from\nCATE-BLP and plugin linear regression ",
     subtitle = "Black dashed line represents the true effect.\nGreen line is CATE-BLP from DR Learner"
   )
-
-# Find total predicted effect using an approximately optimal vs. "treat all" 
-# targeting. Uncertainty estimated with bootstrap
-total_pred <- cate_blp_bootstrap(blp_drl, iterations = 1000, 
-                                 tau.treatment.baseline = 0)
-
-total_pred$difference_blp <- total_pred$predicted_optimal - total_pred$predicted_totals
-
-ggplot(total_pred, aes(difference_blp)) +
-    geom_density(alpha = 0.7) +
-    xlab("\nPredicted Incremental Profit") +
-    ggtitle("Bootstraped Predicted Incremental Profit of using\nApproximately Optimal vs 'Treat All' targeting\nfor a population with characteristics A")
 ```
+
